--- a/configuration.ini
+++ b/configuration.ini
@@ -10,14 +10,14 @@ cmdenv-express-mode = true
 *.manager.launchConfig = xmldoc("ClusterRerouting.launchd.xml")
 *.manager.moduleType = "org.car2x.veins.subprojects.veins_inet.VeinsInetCar"
 *.car[*].mobility.typename = "VeinsInetMobility"
-# Παράμετροι για τα οχήματα
-#*.car[*].typename = "CarType"
-#*.car[*].mobility.typename = "MassMobility" 
-#*.car[*].app.typename = "ClusterRerouting" 
-# Παράμετροι για κεραία RSU
-#*.rsu.typename = "rsu"
-#*.rsu.mobility.typename = "StaticMobility"
-#*.rsu.app.typename = "ClusterRerouting"
+#Παράμετροι για τα οχήματα και τις κεραίες
+*.car[*].typename = "CarType"
+*.car[*].mobility.typename = "MassMobility" 
+*.car[*].app.typename = "ClusterRerouting" 
+ Παράμετροι για κεραία RSU
+*.rsu.typename = "rsu"
+*.rsu.mobility.typename = "StaticMobility"
+*.rsu.app.typename = "ClusterRerouting"
 
 *.car[*].ipv4.configurator.typename = "HostAutoConfigurator"
 *.car[*].ipv4.configurator.interfaces = "wlan0"
@@ -42,28 +42,28 @@ cmdenv-express-mode = true
 *.car[*].wlan[*].radio.displayCommunicationRange = true
 
 # Παράμετροι επικοινωνίας
-#*.radioMediumRSU.typename = "Ieee80211ScalarRadioMedium"
-#*.radioMediumCar.typename = "Ieee80211ScalarRadio"
-#*.car[*].wlan[*].radio.typename = "Ieee80211ScalarRadio"
-#*.car[*].wlan[*].radio.transmitter.power = 30mW 
-#*.car[*].wlan[*].radio.displayCommunicationRange = true
-#*.car[*].wlan[*].radio.radioMediumModule = "Ieee80211ScalarRadio"
-#*.car[*].wlan[*].bitrate = 6Mbps
-#*.car[*].wlan[*].radio.receiver.sensitivity = -95dBm
-#*.rsu.wlan.typename = "Ieee80211ScalarRadioMedium" 
-#*.rsu.wlan[*].radio.transmitter.power = 30mW
-#*.rsu.wlan[*].radio.displayCommunicationRange = true
-#*.rsu.wlan[*].radio.radioMediumModule = "Ieee80211ScalarRadioMedium"
-#*.rsu.wlan[*].bitrate = 6Mbps
-#*.rsu.wlan[*].radio.receiver.sensitivity = -95dBm
+*.radioMediumRSU.typename = "Ieee80211ScalarRadioMedium"
+*.radioMediumCar.typename = "Ieee80211ScalarRadio"
+*.car[*].wlan[*].radio.typename = "Ieee80211ScalarRadio"
+*.car[*].wlan[*].radio.transmitter.power = 30mW 
+*.car[*].wlan[*].radio.displayCommunicationRange = true
+*.car[*].wlan[*].radio.radioMediumModule = "Ieee80211ScalarRadio"
+*.car[*].wlan[*].bitrate = 6Mbps
+*.car[*].wlan[*].radio.receiver.sensitivity = -95dBm
+*.rsu.wlan.typename = "Ieee80211ScalarRadioMedium" 
+*.rsu.wlan[*].radio.transmitter.power = 30mW
+*.rsu.wlan[*].radio.displayCommunicationRange = true
+*.rsu.wlan[*].radio.radioMediumModule = "Ieee80211ScalarRadioMedium"
+*.rsu.wlan[*].bitrate = 6Mbps
+*.rsu.wlan[*].radio.receiver.sensitivity = -95dBm
 # Παράμετροι για τον αλγόριθμο ομαδοποίησης K-means
-#*.car[*].k = 2
-#*.car[*].numCars = 11
-#*.car[*].clusterIterationLimit = 10  
-#*.car[0].broadcastTime = 30
+*.car[*].k = 2
+*.car[*].numCars = 11
+*.car[*].clusterIterationLimit = 10  
+*.car[0].broadcastTime = 30
 # Εκτύπωση αποτελεσμάτων προσομοίωσης
-#output-vector-file = results/apotelesma1.vec
-#output-scalar-file = results/apotelesma2.sca
+output-vector-file = results/apotelesma1.vec
+output-scalar-file = results/apotelesma2.sca
 
 [Config plain]
 
