--- a/configuration.ini
+++ b/configuration.ini
@@ -14,7 +14,7 @@ cmdenv-express-mode = true
 *.car[*].typename = "CarType"
 *.car[*].mobility.typename = "MassMobility" 
 *.car[*].app.typename = "ClusterRerouting" 
- Παράμετροι για κεραία RSU
+#Παράμετροι για κεραία RSU
 *.rsu.typename = "rsu"
 *.rsu.mobility.typename = "StaticMobility"
 *.rsu.app.typename = "ClusterRerouting"
